--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 transformers==4.35.0
 torch==2.1.0
-datasets==2.15.0
+datasets==2.14.6
 pandas
 sconf==0.2.5
 peft==0.7.1
+scipy==1.11.4
 deepspeed==0.12.5
